--- a/templates/artist/artist.html
+++ b/templates/artist/artist.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load humanize %}
 {% block content %}
-<link rel="stylesheet" href="{% static "css/music_detail.css" %}">
+<link rel="stylesheet" href="{% static 'css/music_detail.css' %}">
 <div class="content__middle">
     <div class="artist__header" style="background-image: url('{{ artists.cover_image.url }}');">
         <div class="artist__info">
@@ -11,10 +11,7 @@
             </div>
             <div class="artist__info__meta">
                 <div class="artist__info__type " style="font-weight: 700;font-size: 12px;">Artist</div>
-                <div class="artist__info__name" style="
-  font-size: 72px;
-  font-weight: 900;
-  letter-spacing: -.04em;">{{artists.pseudonym}}</div>
+                <div class="artist__info__name" style="font-size: 72px;font-weight: 900;letter-spacing: -.04em;">{{artists.pseudonym}}</div>
                 <div class="artist__info__actions">
                     <button class="button-dark">
                         Play
@@ -54,7 +51,7 @@
                         {% if artists.music.all %}
                         {% with latest_music=artists.music.all|first %}
                         <div class="section-title">Latest Released</div>
-                        <a href="{% url "music:detail" latest_music.pk %}">
+                        <a href="{% url 'music:detail' latest_music.pk %}">
                         <div class="latest-release">
                             <div class="latest-release__art">
                                 <img src="{{ latest_music.image.url }}" alt="{{ latest_music.name }}" />
@@ -77,7 +74,7 @@
                 </div>
                 <div class="section-title">Popular</div>
                 {% for song in artists.music.all %}
-                <a href="{% url "music:detail" song.pk %}">  <div class="tracks">
+                <a href="{% url 'music:detail' song.pk %}">  <div class="tracks">
                 <div class="track">
                     <div class="track__art">
                         <img src="{{ song.image.url }}" alt="When It's Dark Out" />
@@ -92,6 +89,8 @@
                     </div>
                     <div class="track__plays">{{ song.listens|intcomma}}</div>
                 </div></a>
+                </div>
+
                 {% endfor %}
                 <div class="overview__related">
                     <div class="section-title">Related Artists</div>
@@ -201,5 +200,6 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
