--- a/templates/music/music_detail.html
+++ b/templates/music/music_detail.html
@@ -16,7 +16,7 @@
 
             <div class="profile__img">
 
-              <img src={{ music.image.url }} />
+              <img src="{{ music.image.url }}" />
 
             </div>
 
@@ -506,8 +506,10 @@
 
       </div>
 
+        </div>
     </div>
     </div>
+
 
 
 
