--- a/static/css/edit_artist_profile.css
+++ b/static/css/edit_artist_profile.css
@@ -128,6 +128,7 @@ form .form-row .textarea{
 }
 form .form-row .submit-btn {
     margin-top: 15%;
+    margin-left: 15%;
   }
 .submit-btn .input-data .inner{
   height: 100%;
