--- a/static/css/likedsong.css
+++ b/static/css/likedsong.css
@@ -2,6 +2,7 @@
     display: flex;
     color: #fff;
     height: 280px;
+    padding-button:10%;
     background: linear-gradient(transparent,rgba(0,0,0,.5)), rgb(70, 62, 118);
 
 }
@@ -73,6 +74,24 @@
     width: 24px;
     filter: invert(0.7);
 }
+.playlist__headerDuration1{
+  display: flex;
+  align-items: center;
+
+}
+.playlist__headerDuration1 button{
+  display: flex;
+  align-items: center;
+  margin-left:50px;
+  cursor: pointer;
+
+}
+.playlist__headerDuration1 img{
+    object-fit: contain;
+    width: 24px;
+    cursor: pointer;
+
+}
 .divider {
     width: 98%;
 }
@@ -106,7 +125,7 @@
 .playlist__row:hover {
     background: #272A2B;
 }
-.delete {
+.playlist__headerDelete {
     margin-left: 20px;
     height: 40px ;
     width: 40px;
@@ -173,6 +192,10 @@ audio {
 
 #myAudio::-webkit-media-controls-fullscreen-button {
     display: none; /* Hide fullscreen button */
+}
+
+.button img {
+ color:black;
 }
 
 
