--- a/static/css/search_result.css
+++ b/static/css/search_result.css
@@ -1,4 +1,14 @@
 
+.spotify-playlists h4 {
+    color: #b9b9b9;
+
+    font-weight: 200;
+}
+
+h2 {
+    color: white;
+
+}
   .spotify-playlists {
     padding: 20px 40px;
     margin-left:17%;
@@ -11,6 +21,8 @@
   .spotify-playlists .list {
     display: flex;
     gap: 20px;
+    margin-top:5px;
+    flex-wrap: wrap;
     overflow: hidden;
   }
   .spotify-playlists .list .item {
