--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -24,77 +24,66 @@
 
     <div class="sidebar">
         <div class="logo">
-             <a href="{% url "home:home" %}">
+             <a href="{% url 'home:home' %}">
                 <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_CMYK_Green.png"
                     alt="Logo" />
             </a>
         </div>
-<div class="navigation">
-            <ul>
-                <li>
-                    <a href="{% url "home:home" %}">
-                        <span class="fa fa-home"></span>
-                        <span>Home</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span class="fa fa-search"></span>
-                        <span>Search</span>
-                    </a>
-                </li>
-
-            </ul>
-        </div>
-
         <div class="navigation">
             <ul>
-                <li>
-                     <a href="{% url "music:playlist" %}">
-                     <span class="fa fas fa-book"></span>
 
+                    <li>
+                        <a href="{% url "home:home" %}">
+                        <span class="fa fa-home"></span>
+                        <span>Home</span>
+                        </a>
+                    </li>
+                <li>
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'music:playlist' pk=user.pk %}">
+                        <span class="fa fas fa-book"></span>
                         <span>Your Playlist</span>
                     </a>
                 </li>
-
+                {% endif %}
                 <li>
-                    <a href="{% url "music:liked_songs" %}">
-                        <span class="fa fas fa-heart"></span>
-                        <span>Liked Songs</span>
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'music:liked_songs' pk=user.pk %}">
+                    <span class="fa fas fa-heart"></span>
+                    <span>Liked Songs</span>
                     </a>
-{% if user.is_artist %}
-                     <li>
-                    <a href="{% url "music:add_music" %}">
-                        <span class="fa fas fa-plus-square"></span>
-                        <span>Add Music</span>
+                    {% endif %}
+                </li>
+                    {% if user.is_artist %}
+                <li>
+                    <a href="{% url 'music:add_music' %}">
+                    <span class="fa fas fa-plus-square"></span>
+                    <span>Add Music</span>
                     </a>
                 </li>
-
                 {% endif %}
-
             </ul>
         </div>
-
-
     </div>
 
 
 
     <div class="main-container">
         <div class="topbar">
+            <form action="{% url 'home:search'%}" method="get" class="d-flex">
             <div class="search-box">
-                <button class="btn-search"><i class="fas fa-search"></i></button>
-               <input type="text" class="input-search" placeholder="Type to Search...">
+                <button class="btn-search" type="submit"><i class="fas fa-search"></i></button>
+               <input type="text" name="query" class="input-search" placeholder="Type to Search...">
             </div>
+            </form>
 
             <div class="navbar">
                 <ul>
                     <li>
-                        <a href="{% url "payment:payment_detail" %}">Premium</a>
+                        <a href="{% url 'payment:payment_detail' %}">Premium</a>
                     </li>
                     <li>
-                        <a href="{% url "home:FAQ" %}">Support</a>
+                        <a href="{% url 'home:FAQ' %}">Support</a>
                     </li>
 
 
@@ -103,12 +92,12 @@
 
 
                     <li>
-                        <a href="{% url "user:registration" %}">
+                        <a href="{% url 'user:registration' %}">
                         Sign Up</a>
 
                     </li>
                 </ul>
-                <a href="{% url "user:login" %}">
+                <a href="{% url 'user:login' %}">
                 <button type="button">Log In</button>
                </a>
 
