--- a/templates/music/edit_music.html
+++ b/templates/music/edit_music.html
@@ -59,6 +59,13 @@
                     <input type="submit" value="submit">
                 </div>
             </div>
+            <div class="form-row submit-btn">
+                <div class="input-data">
+                    <div class="inner"></div>
+                    <a href="{% url 'user:profile' pk=user.id %}"><input type="button" value="Go Back"></a>
+                </div>
+            </div>
+
         </div>
     </form>
 </div>
