--- a/templates/music/likedsong.html
+++ b/templates/music/likedsong.html
@@ -1,3 +1,4 @@
+
 {% extends "music/liked_songs.html" %}
 {% load static %}
 {% block css %}
@@ -8,7 +9,9 @@
 {% block search %}
 {% endblock %}
 {% block liked-song %}
-active
+
+<img height="40px" class="likedImg" src="https://t.scdn.co/images/3099b3803ad9496896c43f22fe9be8c4.png" alt="">
+<a href="/playlist" class='label'>Liked Songs</a>
 {% endblock %}
 {% block main %}
 <div class="playlist__banner">
@@ -20,48 +23,49 @@ active
     <div class="playlist__right">
         <div style='font-weight: 700;font-size: 12px;'>PLAYLIST</div>
         <div class="playlist__name">Liked Songs</div>
-        <div>{{ request.user }}<span class='grey_text'> . {{user_playlist.count}} Songs<span></div>
+        <div>{{ request.user }}<span class='grey_text'> . {{ musics.music.count }} Songs<span></div>
     </div>
 </div>
-<!--play button-->
-<div class="playlist__optionbar">
-    <!--     <div class="playlist__play">-->
-    <!--       <img src="https://cdn.discordapp.com/attachments/768083738848133130/769476261181128734/image_1.png" alt=""></img>-->
-    <!--      </div>-->
-</div>
 <div class="playlist__list">
-    <div class="playlist__header" >
-        <div class="playlist__headerTitle"># TITLE</div>
-        <div class="playlist__headerAlbum">ALBUM</div>
-        <div class="playlist__headerDate">DATE ADDED</div>
-        <div class="playlist__headerDuration">
+    <div class="playlist__header">
+        <div class="playlist__headerTitle"># Title</div>
+        <div class="playlist__headerAlbum">Artist</div>
+        <div class="playlist__headerDate">Date Added</div>
+        <div class="playlist__headerDuration">Duration
             <img src="https://img.icons8.com/pastel-glyph/344/clock--v1.png" alt="">
         </div>
     </div>
-    <hr class="divider">
-    <div class="playlist__songlist">
-        {% for song in musics %}
-        <form action="" method="get">
-            <div class="playlist__song playlist__row" onclick='playSong("{{ song.file }}","false","true")'>
-                <div class="playlist__headerTitle">
-                    <img class="playlist__albumimg" src="{{song.image.url}}" alt =''/>
-                    <div class="playlist__songTitle ellipsis_one_line">
-                        {{song.name}}
-                    </div>
-                    <textarea name="song" id="song_name_delete" cols="1" rows="1">{{song.name}}</textarea>
-                    <audio id="myAudio" controls >
-                        <source src="{{ song.file.url }}" type="audio/mpeg">
-                    </audio>
+<hr class="divider">
+<div class="playlist__songlist">
+    {% for song in musics.music.all %}
+    <form method="post" action="{% url "music:remove_from_likedsongs" song_id=song.id %}">
+    {% csrf_token %}
+    <div class="playlist__song playlist__row" onclick='playSong("{{ song.file }}","false","true")'>
+        <div class="playlist__headerTitle">
+            <img class="playlist__albumimg" src="{{ song.image.url }}" alt =''/>
+            <a href="{% url 'music:detail' pk=song.pk %}">
+                <div class="playlist__songTitle ellipsis_one_line">
+                    {{song.name}}
                 </div>
-                <div class="playlist__headerAlbum ellipsis_one_line">{{song.song_channel}}</div>
-                <div class="playlist__headerDate">{{song.year}}</div>
-                <div class="playlist__headerDuration">
-                    {{song.duration}}
-                    <button type='submit' class="delete"><img src="https://cdn.discordapp.com/attachments/768083738848133130/777588678028951572/delete-icon-28.jpg" alt=""</button>
-                </div>
-            </div>
-        </form>
+            </a>
+            <textarea name="song" id="song_name_delete" cols="1" rows="1">{{ song.name }}</textarea>
+            <audio id="myAudio" controls>
+                <source src="{{ song.file.url }}" type="audio/mpeg">
+            </audio>
+        </div>
+        <div class="playlist__headerAlbum ellipsis_one_line">{{ song.song_channel }}</div>
+        {% for artist in song.artists.all %}
+        <a href="{% url 'artist:artist_detail' pk=artist.pk %}">{{ artist.pseudonym }}
+            <div class="playlist__headerAlbum ellipsis_one_line"></div></a>
         {% endfor %}
-    </div>
+        <div class="playlist__headerDate">{{ song.year }}</div>
+        <div class="playlist__headerDuration1">
+            {{ song.duration }}
+            <button type="submit">
+                <img src="https://cdn.discordapp.com/attachments/768083738848133130/777588678028951572/delete-icon-28.jpg" alt=""></button>
+        </div>            </div>
+</div>
+</form>
+{% endfor %}
 </div>
 {% endblock %}
