--- a/templates/music/playlist.html
+++ b/templates/music/playlist.html
@@ -1,92 +1,66 @@
 {% extends "music/liked_songs.html" %}
 {% load static %}
-
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/likedsong.css' %}?{% now " U " %}">
-
-
 {% endblock %}
-
-{% block home %}
-{% endblock %}
-
-{% block search %}
-{% endblock %}
-
 {% block liked-song %}
-active
+<img height="40px" class="likedImg" src="https://content-management-files.canva.com/32d9bcdc-d81c-44ee-9431-80382a5b3d88/THUMB_VisualSuite_2x.png">
+<a href="{% url 'music:playlist' pk=user.id %}" class='label'>Your Playlist</a>
 {% endblock %}
 
 {% block main %}
 <div class="playlist__banner">
-{% for playlist in user_musics %}
-	<div class="playlist__left">
-		<div class="playlist__album">
-            {% if playlist.image %}
-			<img src="{{ playlist.image.url }}" alt="" class="playlist__img">
-            {% endif %}
+    <div class="playlist__left">
+        <div class="playlist__album">
+            <img src="{% static 'img/playlist_image.jpeg' %}" alt="" class="playlist__img">
         </div>
     </div>
     <div class="playlist__right">
         <div style='font-weight: 700;font-size: 12px;'>PLAYLIST</div>
-        <div class="playlist__name">{{ playlist.name }}</div>
-        <div>{{ user_musics.description }}<span class='grey_text'>{{user.first_name}} {{user.last_name}} Songs<span></div>
+        <div class="playlist__name">{{ user_musics.name }}</div>
+        <div>{{ user_musics.description }}<span class='grey_text'>{{ user.first_name }} {{ user.last_name }} Songs</span></div>
     </div>
-
 </div>
-
-
-
-
-
 <div class="playlist__list">
-    <div class="playlist__header" >
+    <div class="playlist__header">
         <div class="playlist__headerTitle"># Title</div>
         <div class="playlist__headerAlbum">Artist</div>
         <div class="playlist__headerDate">Date Added</div>
         <div class="playlist__headerDuration">Duration
-        <img src="https://img.icons8.com/pastel-glyph/344/clock--v1.png" alt="">
+            <img src="https://img.icons8.com/pastel-glyph/344/clock--v1.png" alt="">
         </div>
     </div>
     <hr class="divider">
-
-
     <div class="playlist__songlist">
-{% for song in playlist.music.all %}
+        {% for song in user_musics.music.all %}
+        <form method="post" action="{% url 'music:remove_from_playlist' song_id=song.id %}">
+            {% csrf_token %}
+            <div class="playlist__song playlist__row" onclick='playSong("{{ song.file }}","false","true")'>
+                <div id="playlistContainer" class="playlist__headerTitle">
+                    <img class="playlist__albumimg" src="{{song.image.url}}" alt=''>
+                    <a href="{% url 'music:detail' pk=song.pk %}">
+                        <div class="playlist__songTitle ellipsis_one_line">
+                            {{song.name}}
+                        </div>
+                    </a>
+                    <audio id="myAudio" controls>
+                        <source src="{{ song.file.url }}" type="audio/mpeg">
+                    </audio>
+                </div>
 
-        <form action="" method="get">
-        <div class="playlist__song playlist__row" onclick='playSong("{{ song.file }}","false","true")'>
-        <div  id="playlistContainer" class="playlist__headerTitle">
-          <img class="playlist__albumimg" src="{{song.image.url}}" alt =''/>
-              <a href="{% url "music:detail" song.pk %}">
-          <div class="playlist__songTitle ellipsis_one_line">
-          {{song.name}}
-          </div>
-
-          <textarea name="song" id="song_name_delete" cols="1" rows="1">{{song.name}}</textarea></a>
-            <audio id="myAudio" controls >
-                <source src="{{ song.file.url }}" type="audio/mpeg">
-            </audio>
-
-
-          </div>
-            {% for artist in song.artists.all %}
-            <a href="{% url 'artist:artist_detail' pk=artist.pk %}">{{ artist.pseudonym }}
-
-        <div class="playlist__headerAlbum ellipsis_one_line"></div></a>
-            {% endfor %}
-        <div class="playlist__headerDate">{{song.year}}</div>
-        <div class="playlist__headerDuration">
-        {{song.duration}}
-        <button type='submit' class="delete"><img src="https://cdn.discordapp.com/attachments/768083738848133130/777588678028951572/delete-icon-28.jpg" alt=""</button>
-        </div>
-    </div>
-    </form>
-    {% endfor %}
+                {% for artist in song.artists.all %}
+                <a href="{% url 'artist:artist_detail' pk=artist.pk %}">{{ artist.pseudonym }}</a>
+                {% endfor %}
+                <div class="playlist__headerDate">{{song.year}}</div>
+                <div class="playlist__headerDuration1">
+                    {{song.duration}}
+                    <button type="submit" name="cancel">
+                        <img src="https://cdn.discordapp.com/attachments/768083738848133130/777588678028951572/delete-icon-28.jpg" alt=""></button>
+                </div>
+            </div>
+        </form>
         {% endfor %}
     </div>
-
+    {% endblock %}
 </div>
 
-
-{% endblock %}
