--- a/templates/music/playlist_search.html
+++ b/templates/music/playlist_search.html
@@ -8,66 +8,63 @@
 {% block search %}
 {% endblock %}
 {% block liked-song %}
-<img height="40px" class="likedImg" src="{{ albums.image.url }}"
-     alt="">
-<a href="/playlist" class='label'>{{ albums.name }}</a>
+<img height="40px" class="likedImg" src="https://t.scdn.co/images/3099b3803ad9496896c43f22fe9be8c4.png"
+     alt=""></img>
+<a href="/playlist" class='label'>Search Result</a>
 {% endblock %}
-
 {% block main %}
 <div class="playlist__banner">
     <div class="playlist__left">
         <div class="playlist__album">
-            <img src="{{ albums.image.url }}" alt="" class="playlist__img">
+            <img src="https://static.vecteezy.com/system/resources/previews/000/694/773/original/woman-searching-web-for-information-vector.jpg" alt="" class="playlist__img">
         </div>
     </div>
     <div class="playlist__right">
-        <div style='font-weight: 700;font-size: 12px;'>PLAYLIST</div>
-        <div class="playlist__name">{{ albums.name }}</div>
-        <div>{{ albums.description }}<span class='grey_text'> . {{user_playlist.count}} Songs<span></div>
+        <div class="playlist__name">Search Result</div>
+        <div>{{ request.user }}<span class='grey_text'> . {{user_playlist.count}} Songs<span></div>
     </div>
+</div>
+
+<div class="playlist__optionbar">
+
 </div>
 <div class="playlist__list">
     <div class="playlist__header" >
-        <div class="playlist__headerTitle"># Title</div>
-        <div class="playlist__headerAlbum">Artist</div>
-        <div class="playlist__headerDate">Date Added</div>
-        <div class="playlist__headerDuration">Duration
+        <div class="playlist__headerTitle"># TITLE</div>
+        <div class="playlist__headerAlbum"></div>
+        <div class="playlist__headerDate">DATE ADDED</div>
+        <div class="playlist__headerDuration">
             <img src="https://img.icons8.com/pastel-glyph/344/clock--v1.png" alt="">
         </div>
     </div>
     <hr class="divider">
     <div class="playlist__songlist">
-        {% for song in albums.music.all %}
+        {% if songs %}
+        {% for song in songs %}
         <form action="" method="get">
-
-            <div class="playlist__song playlist__row" >
-
+            <div class="playlist__song playlist__row" onclick='playSong("{{ song.file }}","false","true")'>
                 <div class="playlist__headerTitle">
                     <img class="playlist__albumimg" src="{{song.image.url}}" alt =''/>
-                    <a href="{% url "music:detail" song.pk %}">
                     <div class="playlist__songTitle ellipsis_one_line">
                         {{song.name}}
                     </div>
-
                     <textarea name="song" id="song_name_delete" cols="1" rows="1">{{song.name}}</textarea>
-                    </a>
                     <audio id="myAudio" controls >
                         <source src="{{ song.file.url }}" type="audio/mpeg">
                     </audio>
                 </div>
-                {% for artist in song.artists.all %}
-                <a href="{% url 'artist:artist_detail' pk=artist.pk %}">{{ artist.pseudonym }}
-                    <div class="playlist__headerAlbum ellipsis_one_line"></div></a>
-                {% endfor %}
+                <div class="playlist__headerAlbum ellipsis_one_line">{{song.song_channel}}</div>
                 <div class="playlist__headerDate">{{song.year}}</div>
                 <div class="playlist__headerDuration">
                     {{song.duration}}
-
+                    <button type='submit' class="delete"><img src="https://cdn.discordapp.com/attachments/768083738848133130/777588678028951572/delete-icon-28.jpg" alt=""</button>
                 </div>
             </div>
         </form>
         {% endfor %}
+        {% else %}
+            <h2>No, result found</h2>
+        {% endif %}
     </div>
-    {% endblock %}
 </div>
-
+{% endblock %}
