--- a/templates/home/FAQ.html
+++ b/templates/home/FAQ.html
@@ -75,141 +75,69 @@ Who is the best teacher    </h3>
       <i class="fas fa-times"></i>
     </button>
   </div>
-
-  <div class="faq">
-    <h3 class="faq-title">
-      how can i listen more songs?
-    </h3>
-    <p class="faq-text">
-      Buy some account or Log In
-=======
-      Why shouldn't we trust your template?
-    </h3>
-    <p class="faq-text">
-      We can provide you with best Spotify simulations and we are save.
->>>>>>> Stashed changes
-=======
-      Why shouldn't we trust your template?
-    </h3>
-    <p class="faq-text">
-      We can provide you with best Spotify simulations and we are save.
->>>>>>> Stashed changes
-    </p>
-    <button class="faq-toggle">
-      <i class="fas fa-chevron-down"></i>
-      <i class="fas fa-times"></i>
-    </button>
-  </div>
-
-  <div class="faq">
-    <h3 class="faq-title">
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-      Do you have any spacial offers for students?
-    </h3>
-    <p class="faq-text">
-      Yes, Pro Students account
-
-      how can i listen more songs?
-    </h3>
-    <p class="faq-text">
-      Buy some account or Log In
-
-      how can i listen more songs?
-    </h3>
-    <p class="faq-text">
-      Buy some account or Log In
-
-    </p>
-    <button class="faq-toggle">
-      <i class="fas fa-chevron-down"></i>
-      <i class="fas fa-times"></i>
-    </button>
-  </div>
-
-  <div class="faq">
-    <h3 class="faq-title">
-
-Who are the worst developers ever    </h3>
-    <p class="faq-text">
-Jasmin Khachatryan and Sophie Melkonayn     </p>
-
-      Do you have any spacial offers for students?
-    </h3>
-    <p class="faq-text">
-      Yes, Pro Students account
-
-    </p>
-
-    <button class="faq-toggle">
-      <i class="fas fa-chevron-down"></i>
-      <i class="fas fa-times"></i>
-    </button>
-  </div>
-
-  <div class="faq">
-    <h3 class="faq-title">
-
-      What Premium account give you?
-    </h3>
-    <p class="faq-text">
-
-      How many songs I can add in my account?
-    </h3>
-    <p class="faq-text">
-      it depends on your account type
-
-Stashed changes
-    </p>
-    <button class="faq-toggle">
-      <i class="fas fa-chevron-down"></i>
-      <i class="fas fa-times"></i>
-    </button>
-  </div>
-
-  <div class="faq">
-    <h3 class="faq-title">
-
-      What Premium account give you?
-    </h3>
-    <p class="faq-text">
-
-      How many songs I can add in my account?
-    </h3>
-    <p class="faq-text">
-      it depends on your account type
-    </p>
-    <button class="faq-toggle">
-      <i class="fas fa-chevron-down"></i>
-      <i class="fas fa-times"></i>
-    </button>
-  </div>
-
-  <div class="faq">
-    <h3 class="faq-title">
-      What Premium account give you?
-    </h3>
-    <p class="faq-text">
-      Unlimited ways to listen follow and add song in playlist.
-    </p>
-    <button class="faq-toggle">
-      <i class="fas fa-chevron-down"></i>
-      <i class="fas fa-times"></i>
-    </button>
-  </div>
 </div>
 
-<!-- SOCIAL PANEL HTML -->
-<div class="social-panel-container">
-  <div class="social-panel">
-    <p>Created with <i class="fa fa-heart"></i> by
-      <a target="_blank" href="https://florin-pop.com">Florin Pop</a></p>
-    <button class="close-btn"><i class="fas fa-times"></i></button>
-    <h4>Get in touch on</h4>
+<div class="faqs-container">
+    <div class="faq">
 
-  </div>
+        <h3 class="faq-title">
+            Can I delete songs from playlists
+               </h3>
+        <p class="faq-text">
+            Yes you can
+        </p>
+        <button class="faq-toggle">
+            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-times"></i>
+        </button>
+    </div>
 </div>
 
+<div class="faqs-container">
+    <div class="faq">
 
-<script src="{% static 'js/FAQ.js' %}"></script>
+        <h3 class="faq-title">
+
+            Do you have offers for artist</h3>
+        <p class="faq-text">
+            Yes you can promote you artist page here
+        </p>
+        <button class="faq-toggle">
+            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-times"></i>
+        </button>
+    </div>
+</div>
+<div class="faqs-container">
+    <div class="faq">
+
+        <h3 class="faq-title">
+
+            I cant add songs in my Playlist</h3>
+        <p class="faq-text">
+            First you need to buy one of premium accounts
+        </p>
+        <button class="faq-toggle">
+            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-times"></i>
+        </button>
+    </div>
+</div>
+<div class="faqs-container">
+    <div class="faq">
+
+        <h3 class="faq-title">
+
+            I forgot my Password,can I Reset it?</h3>
+        <p class="faq-text">
+            Yes,please visit login page and click Forgot Password? tag
+        </p>
+        <button class="faq-toggle">
+            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-times"></i>
+        </button>
+    </div>
+</div>
+
+        <script src="{% static 'js/FAQ.js' %}"></script>
 
