--- a/static/css/card.css
+++ b/static/css/card.css
@@ -3,7 +3,7 @@
 
 
 body {
-  background: #181a1925;
+  background: #d3d5d400;
   background-image: linear-gradient(135deg, #124129bd 10%, #04140b9c 100%);
   background-attachment: fixed;
   background-size: cover;
@@ -12,7 +12,7 @@ body {
 
 #container {
   box-shadow: 0 15px 30px 1px rgba(128, 128, 128, 0.31);
-  background: #01311F;
+  background: #124129;
   text-align: center;
   border-radius: 5px;
   overflow: hidden;
